--- a/ui/main-sidebar/current-user-summary.reel/_current-user-summary.css
+++ b/ui/main-sidebar/current-user-summary.reel/_current-user-summary.css
@@ -1,11 +1,12 @@
 .CurrentUserSummary {
     text-align: center;
-    margin-top: 1em;
-    margin-bottom: .5em;
+    padding-top:    .5rem;
+    margin-bottom:  .5rem;
 
     & > *:not(:last-child) {
         margin-bottom: .5em;
     }
+    border-top: 1px solid var(--primary);
 }
 
 .CurrentUserSummary-time {
