fix bug on container image selection

--- a/ui/sections/containers/controls/docker-image-search.reel/_docker-image-search.css
+++ b/ui/sections/containers/controls/docker-image-search.reel/_docker-image-search.css
@@ -1,5 +1,5 @@
-.DockerImageSearch {
-
+.DockerImageSearch .Table-content {
+    cursor: pointer;
 }
 
 .DockerImageSearch-table .Table-row > div:nth-child(1),
