makes login modal bg solid to hide layout loading flash on login

--- a/ui/main.reel/_main.css
+++ b/ui/main.reel/_main.css
@@ -28,6 +28,7 @@
 }
 
 .SignInModal.montage-Overlay--visible {
+    background-color: var(--primary--9);
     opacity: 1;
     visibility: visible;
 }
