FIX-22011 - make system updates min-width wider

--- a/ui/sections/system/inspectors/updates.reel/_updates.css
+++ b/ui/sections/system/inspectors/updates.reel/_updates.css
@@ -1,5 +1,6 @@
 .SystemSection.updates {
-    max-width: 48rem
+    min-width: 25rem;
+    max-width: 48rem;
 }
 
 .Updates-operations { display: none; }
