FIX: 22021 - available disks should have a min-height to allow for scrolling Ticket: #22021

--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/_disks-category.css
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/_disks-category.css
@@ -1,6 +1,6 @@
 .AvailableDisksCategory {
     position: relative;
-
+    min-height: 10rem;
     /* toggle disks */
     &.is-expanded {
         & .Scroller { display: block; }
