--- a/ui/controls/topology.reel/vdev.reel/_vdev.css
+++ b/ui/controls/topology.reel/vdev.reel/_vdev.css
@@ -55,6 +55,7 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     box-shadow: 0 1px 1px var(--shadow-1);
+    user-select: none;
 
     & .Grid-repetition {
         display: flex;
