Make disconnection spinner display: block
Ticket: #23008

--- a/ui/disconnection-modal.reel/_disconnection-modal.css
+++ b/ui/disconnection-modal.reel/_disconnection-modal.css
@@ -19,5 +19,5 @@
 }
 
 .DisconnectionModal-modal.montage-Overlay--visible .DisconnectionModal-spinner {
-    display: inherit;
+    display: block;
 }
